* Fix named Effects not showing up in Power menu tooltips. (Justin Jacobs)
* Fix passive powers not respecting some power usage requirements. (Justin Jacobs)
* Fix some events being activated when they shouldn't if the player was inside of their location rect. (Justin Jacobs)
* Fix Power attribute pre_power not working for AI creatures. (Justin Jacobs)
* Fix incorrect dimensions of SVG icon. (Alexander Wilms)
* Fix Windows installer not using the correct working directory for launching Flare after install. (Justin Jacobs)

Documentation:

* Add documentation for creating Mac OS build. (Thomas Leavitt)

Translation Updates:

* Scottish Gaelic (gd) update (GunChleoc)

Game changes:

* Redesign final Fort Nasu puzzle, in response to the frustrations of many players. (Justin Jacobs)
* Increase elemental ring bonuses by 10%. (Justin Jacobs)
* Tweak slingshot stone graphics to make it more visible on some maps. (Justin Jacobs)
* Add appdata.xml for use with various package managers. (Alexander Wilms)



Flare v1.0 http://flarerpg.org/index.php/2018/03/12/flare-1-0/

Engine changes:

* Add dependency checking and metadata to mods; remove --game command line flag (Justin Jacobs)
* Engine and mod version checking. Mods can require specific engine & dependency versions. (Justin Jacobs)
* Add --mods command line option. (Justin Jacobs)
* Allow mod files to "append" their contents instead of replacing the target file (Justin Jacobs)
* Print filename & line number when file parsing errors occur (Justin Jacobs)

* Switch to using SDL 2 (Justin Jacobs)
* Refactored rendering system to support alternate backends (Henrik Andersson, Igor Paliychuk, Justin Jacobs)
* Implement automatic frame skipping for slow systems (Justin Jacobs)
* Refactor animation system to support higher framerates (Justin Jacobs)
* Change default maximum framerate to 60 FPS (Justin Jacobs)
* Resizable game window (Justin Jacobs)
* Scaled rendering that always fills the window (Justin Jacobs)