@@ -207,7 +207,6 @@ void MenuTalker::createBuffer() {
 	// render dialog text to the scrollbox buffer
 	Point line_size = font->calc_size(line,textbox->pos.w-(text_offset.x*2));
 	textbox->resize(textbox->pos.w, line_size.y);
-	textbox->line_height = font->getLineHeight();
 	font->setFont(font_dialog);
 	font->render(
 		line,
